src/style.scss
@use 'mixins' as *;
@use 'config/theme';
@use 'base';
@use 'layout';
@use 'alerts';

@font-face {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 100 900;
  font-display: swap;
  src: url('inter/InterVariable.woff2') format('woff2');
}

@font-face {
  font-family: 'Inter';
  font-style: italic;
  font-weight: 100 900;
  font-display: swap;
  src: url('inter/InterVariable-Italic.woff2') format('woff2');
}

@font-face {
  font-family: 'Google Sans Code';
  font-style: normal;
  font-weight: 300 800;
  font-display: swap;
  src: url('google-sans-code/GoogleSansCodeVariable.woff2') format('woff2');
}

@font-face {
  font-family: 'Google Sans Code';
  font-style: italic;
  font-weight: 300 800;
  font-display: swap;
  src: url('google-sans-code/GoogleSansCodeVariable-Italic.woff2')
    format('woff2');
}

::selection {
  color: var(--bg-color);
  background: var(--fg-color);
}

:focus-visible {
  outline: 2px solid var(--theme-color);
  outline-offset: 1px;
}

a.disabled {
  color: var(--fg-color-translucent);
  text-decoration-color: var(--fg-color-translucent);
  cursor: not-allowed;

  @media (hover: hover) {
    &:hover {
      color: var(--fg-color-translucent);
      text-decoration-line: none;
    }
  }
}

a.external::after {
  content: '';
  display: inline-block;
  width: 1em;
  height: 1em;
  vertical-align: middle;
  @include contained-mask(var(--icon-external-link));
}

.footnotes {
  margin-top: calc(var(--thematic-break-margin) / 2);
  padding-top: 32px;
  border-top: 3px solid var(--bg2-color);
  font-size: 0.9em;
}

.footnotes .title {
  @include user-select(none);
  font-weight: 700;
  font-size: larger;
}

.footnotes p {
  margin: 0;
}

.footnotes li {
  margin-bottom: 8px;
}

a.footnote-ref {
  vertical-align: super;
  border-bottom: none;
  font-size: 0.8em;
}

.footnote-item {
  &:target {
    outline: 2px solid var(--theme-color);
    outline-offset: 1px;
  }
}

a.footnote-ref,
.footnotes .footnote-backref {
  display: inline-block;
  @include user-select(none);
}

hr {
  border: none;
  height: 32px;
  margin: var(--section-padding) 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

hr::after {
  content: '';
  display: block;
  width: 160px;
  height: 12px;
  background-color: var(--fg2-color);
  mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 160 12'><rect x='0' y='5.5' width='96' height='1' fill='black'/><path d='M 64,6 C 71,6 80,4.5 80,1 C 80,4.5 89,6 96,6 C 89,6 80,7.5 80,11 C 80,7.5 71,6 64,6 Z' fill='black'/><rect x='64' y='5.5' width='96' height='1' fill='black'/></svg>");
  mask-size: 100% 100%;
  mask-repeat: no-repeat;
}

button,
a.button,
input[type='submit'] {
  background: var(--bg-color);
  color: var(--fg-color);
  padding: 0.25em 0.66em;
  border: var(--control-border-width) solid var(--fg2-color);
  border-radius: var(--border-radius);
  font-size: var(--font-size-small);
  font-family: var(--font);
  font-weight: 500;
  text-decoration: none;
}

button:disabled,
input[type='submit']:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

button:active:not(:disabled),
a.button:not(.disabled):active,
input[type='submit']:active:not(:disabled) {
  background: var(--link-active-color) !important;
  color: var(--bg-color) !important;
}

@media (hover: hover) {
  button:hover:not(:disabled),
  a.button:not(.disabled):hover,
  input[type='submit']:hover:not(:disabled) {
    background: var(--bg2-color);
    cursor: pointer;
  }
}

button:focus,
a.button:focus,
input[type='submit']:focus,
input[type='text']:focus,
input[type='search']:focus,
select:focus {
  outline: 2px solid var(--theme-color);
  outline-offset: 1px;
  border-color: var(--fg-color);
  background-color: var(--bg2-color);
}

button.icon-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  border-radius: 999px;
  padding: 0;
  border: none;
  font-weight: 400;
  font-style: normal;
  vertical-align: top;
}

button.icon-button:focus {
  background-color: var(--bg2-color);
}

ol.styled-list,
ul.styled-list {
  color: var(--theme-color-text);
  font-weight: 700;
}

ul.styled-list {
  // Make bullet points slightly bigger
  font-size: 1.2rem;
}

ol li .styled-list-item,
ul li .styled-list-item {
  color: var(--fg-color);
  font-weight: var(--font-weight);
  font-size: 1rem;
}

ul {
  list-style-type: square;
}

ul ul {
  list-style-type: disc;
}

ul ul ul {
  list-style-type: circle;
}

ul ul ul ul {
  list-style-type: square;
}

ol {
  list-style-type: decimal;
}

ol ol {
  list-style-type: lower-alpha;
}

ol ol ol {
  list-style-type: lower-roman;
}

ol ol ol ol {
  list-style-type: decimal;
}

ol ol ol ol ol {
  list-style-type: lower-alpha;
}

table {
  font-size: var(--font-size-smaller);
  border-collapse: collapse;
  overflow: scroll;
  margin: 1rem 0;
}

thead {
  text-align: left;
}

th,
td {
  border-bottom: 1px solid var(--fg-color);
}

th {
  font-weight: 600;
  color: var(--theme-color-text);
}

th,
td {
  padding: var(--table-padding) var(--table-padding) var(--table-padding) 0;
  text-align: left;
  vertical-align: top;
}

tbody tr:last-child td {
  border-bottom: none;
}

section {
  background: linear-gradient(
    0deg,
    transparent 0,
    var(--bg2-color) 3rem,
    var(--bg2-color) calc(100% - 3rem),
    transparent 100%
  );
  padding: calc(5 * var(--gap)) calc(2 * var(--gap));
  margin: 0 calc(-1 * var(--gap)) 2rem calc(-1 * var(--gap));

  .alert {
    background: var(--bg-color);
  }
}

section h2:first-child,
section h3:first-child,
section h4:first-child,
section h5:first-child,
section h6:first-child {
  font-style: italic;
  font-weight: 600;
}

section > p:last-child,
section > div:last-child {
  margin-bottom: 0;
}

section > h2 + p {
  margin-top: 16px;
}

blockquote {
  color: var(--fg-color);
  font-style: italic;
  font-size: 1.2em;
}

.heading-subtitle {
  font-style: italic;
}

h1 .heading-subtitle,
h2 .heading-subtitle,
h3 .heading-subtitle,
h4 .heading-subtitle,
h5 .heading-subtitle,
h6 .heading-subtitle {
  margin-left: 1rem;
  font-weight: 400;
}

h3.has-subtitle,
h4.has-subtitle,
h5.has-subtitle,
h6.has-subtitle {
  margin-top: 6rem;
  border-bottom: 1px solid var(--fg-color);
  padding-bottom: 0.5em;
  margin-bottom: 0.5em;
}

.small-caps {
  text-transform: uppercase;
  font-weight: 600;
  font-size: 0.9em;
}

dl {
  dt {
    font-weight: 600;
    color: var(--theme-color-text);

    a {
      color: var(--theme-color-text);
      text-decoration-color: var(--theme-color-text);

      &:active {
        text-decoration-color: var(--link-active-color);
      }
    }
  }

  dd > *:first-child {
    margin-top: 0;
  }
}

dfn {
  font-weight: 500;
  color: var(--theme-color-text);
  font-style: italic;
}

a.breadcrumb {
  @include user-select(none);
  @include subdued-link;

  &::after {
    content: '';
    display: inline-block;
    width: 1em;
    height: 1em;
    vertical-align: middle;
    @include contained-mask(var(--icon-breadcrumb));
  }
}

img {
  max-width: 100%;
}

.avatar {
  aspect-ratio: 1 / 1;
  max-width: 100px;
  border-radius: 999px;
  object-fit: cover;
}

figure.bio {
  float: left;
  margin: 1rem 1rem 1rem 0;
  max-width: 125px;

  @media (width > 540px) {
    max-width: 200px;
  }

  .avatar {
    max-width: 100%;
    width: 100%;
    display: block;
  }

  figcaption {
    text-align: center;
    margin-top: var(--gap);
    font-style: italic;
  }
}

kbd {
  display: inline-block;
  padding: 1px 5px;
  border: 1px solid var(--fg-color);
  border-radius: 4px;
  box-shadow: 0 2px 0 var(--fg-color);
  font-family: var(--font);
  font-size: var(--font-size-small);
  font-weight: 500;
}

select {
  font-family: var(--font);
  color: var(--fg-color);
  background: var(--bg-color);
  border: var(--control-border-width) solid var(--fg2-color);
  border-radius: var(--border-radius);
  padding: 4px;
  position: relative;
  font-size: inherit;
}

// Shiki dual-theme support (defaultColor: false, CSS custom properties only,
// no inline color/background-color, so no !important needed)
.shiki span {
  color: var(--shiki-light);
}

@media (prefers-color-scheme: dark) {
  .shiki span {
    color: var(--shiki-dark);
  }
}

